# react-native-nitro-opencv

./: .gitignore  NitroOpencv.podspec  README.md  nitro.json  package-lock.json  package.json
.github/workflows/: ios-build.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/nitroopencv/: NitroOpencvPackage.java
cpp/: HybridNitroOpencv.cpp  HybridNitroOpencv.hpp
example/: App.tsx  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/com.nitroopencvexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/NitroOpencvExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroOpencvExample.xcodeproj/: project.pbxproj
example/ios/NitroOpencvExample.xcodeproj/xcshareddata/xcschemes/: NitroOpencvExample.xcscheme
example/src/: App.tsx  CamPassthrough.tsx  GalleryUpload.tsx
ios/: Bridge.h
src/: index.ts
src/specs/: nitro-opencv.nitro.ts
